# fcitx5-cskk

./: .clang-format  .gitignore  CMakeLists.txt  Messages.sh  README.md  development.org  org.fcitx.Fcitx5.Addon.Cskk.metainfo.xml.in  skk_dict_config.h.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/archlinux_build_environment_setup/: README.md  action.yml
.github/workflows/: build.yml  build_pass.yml  build_pass_archlinux.yml  build_pass_ubuntu.yml  check.yml  clang-format-check.yml  release.yml
cmake/: DebPack.cmake
data/: CMakeLists.txt  README.txt
gui/: CMakeLists.txt  adddictdialog.cpp  adddictdialog.h  adddictdialog.ui  cskk-config.json  dictmodel.cpp  dictmodel.h  dictwidget.cpp  dictwidget.h  dictwidget.ui  main.cpp  main.h
po/: CMakeLists.txt  LINGUAS  de.po  fcitx5-cskk.pot  fr.po  ja.po  ko.po  ru.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  cskk-addon.conf.in.in  cskk.conf.in  cskk.cpp  cskk.h  cskkcandidatelist.cpp  cskkcandidatelist.h  cskkconfig.cpp  cskkconfig.h  dictionary_list.in  log.h
test/: CMakeLists.txt  basic_test.cpp  main.cpp
